kubernetes/policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
  annotations:
    policies.kyverno.io/title: Require Resource Limits
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/description: >-
      CPU and Memory resource limits must be declared to prevent resource 
      starvation and Denial of Service (DoS) conditions.
spec:
  validationFailureAction: Audit
  rules:
  - name: validate-resource-limits
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "CPU and memory resources limits and requests must be defined."
      pattern:
        spec:
          containers:
          - resources:
              limits:
                cpu: "?*"
                memory: "?*"
              requests:
                cpu: "?*"
                memory: "?*"
